# symbiont-core

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: project_vision.md
docs/paper/: symbiont_paper.tex
examples/: gradient_stability_demo.py  progress_demo.py  template_demo.py  toy_sequence.py
symbiont/: __init__.py
symbiont/bridge/: __init__.py  compiler.py  fuzzy.py  tnorms.py
symbiont/core/: __init__.py  constraints.py  dsl.py  operators.py  types.py
symbiont/domains/: __init__.py  base.py  sequence.py  text.py
symbiont/generators/: __init__.py  base.py  mock.py
symbiont/optimization/: __init__.py  adaptive.py  monitor.py
symbiont/templates/: __init__.py  base.py  dna_templates.py  registry.py
symbiont/utils/: __init__.py  metrics.py  visualization.py
tests/: __init__.py  test_bridge.py  test_constraints.py  test_generators.py  test_gradient_stability.py  test_integration.py  test_progress_reporter.py  test_templates.py
